#6 apply Builder pattern to TestHelper class